# Network

./: .gitignore  LICENSE
cfg/: NetworkTest_config.json
src/: CMakeLists.txt  main.cpp
src/client/: Client.cpp  Client.hpp  TcpClient.cpp  TcpClient.hpp  UdpClient.cpp  UdpClient.hpp
src/logger/: Logger.cpp  Logger.hpp
src/server/: Server.cpp  Server.hpp  TcpServer.cpp  TcpServer.hpp  UdpServer.cpp  UdpServer.hpp
src/utils/: types.hpp
